cabal-version:       2.2
name:                easy-bi-cli
version:             0.1.0.0
synopsis:            EasyBI cli and server app
license-file: LICENSE
license: Apache-2.0
author: Jann Müller <j-mueller@users.noreply.github.com>
maintainer: Jann Müller <j-mueller@users.noreply.github.com>
copyright: (c) 2022 Jann Müller
build-type:          Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wunused-packages

library
  import: lang
  hs-source-dirs:
    lib
  exposed-modules:
    EasyBI.Cli
    EasyBI.Cli.Command
    EasyBI.Cli.Config

  build-depends:
    easy-bi-sql,
    easy-bi-server
  
  build-depends:
    base >=4.16.4 && <4.17,
    mtl,
    katip,
    text,
    optparse-applicative,
    simple-sql-parser,
    containers,
    lens,

executable easy-bi
  import: lang
  hs-source-dirs:     app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is: App.hs
  build-depends:
    base >=4.16.4 && <4.17,
    easy-bi-cli