cabal-version:       2.2
name:                easy-bi-server
version:             0.1.0.0
synopsis:            HTTP server for easy-bi
license-file: LICENSE
license: Apache-2.0
author: Jann Müller <j-mueller@users.noreply.github.com>
maintainer: Jann Müller <j-mueller@users.noreply.github.com>
copyright: (c) 2022 Jann Müller
build-type:          Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wunused-packages

library
  import: lang
  hs-source-dirs:
    lib
  exposed-modules:
    EasyBI.Server.API
    EasyBI.Server.Impl
    EasyBI.Server.State
    EasyBI.Server.View
    EasyBI.Server
    EasyBI.Util.MonadLog
    EasyBI.Util.NiceHash

  build-depends:
    easy-bi-sql
  build-depends:
    base >=4.16.4 && <4.17,
    mtl,
    katip,
    prettyprinter,
    transformers,
    text,
    exceptions,
    simple-sql-parser,
    containers,
    bytestring,
    hex-text,
    binary,
    aeson,
    http-api-data,
    serialise,
    deepseq,
    cryptohash,
    servant,
    servant-server,
    warp

