cabal-version:       2.2
name:                easy-bi-server
version:             0.1.0.0
synopsis:            HTTP server for easy-bi
license-file: LICENSE
license: Apache-2.0
author: Jann Müller <j-mueller@users.noreply.github.com>
maintainer: Jann Müller <j-mueller@users.noreply.github.com>
copyright: (c) 2022 Jann Müller
build-type:          Simple
data-files:
  test/data/sales_data_sample.csv
  test/data/sales.db
  test/data/schema.sql

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wunused-packages

library
  import: lang
  hs-source-dirs:
    lib
  exposed-modules:
    EasyBI.Server.API
    EasyBI.Server.Eval
    EasyBI.Server.State
    EasyBI.Server.Cube
    EasyBI.Server.Visualisation
    EasyBI.Server
    EasyBI.Util.JSON
    EasyBI.Util.MonadLog
    EasyBI.Util.NiceHash

  build-depends:
    easy-bi-sql,
    easy-bi-vis
  build-depends:
    base >=4.16.4 && <4.17,
    mtl,
    katip,
    prettyprinter,
    transformers,
    text,
    exceptions,
    simple-sql-parser,
    containers,
    bytestring,
    hex-text,
    binary,
    aeson,
    http-api-data,
    serialise,
    deepseq,
    cryptohash,
    servant,
    servant-server >= 0.19.2,
    warp,
    lens,
    aeson-pretty,
    resource-pool >= 0.3.1.0,
    sqlite-simple >= 0.4.18.2

test-suite easy-bi-server-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -threaded -rtsopts
  main-is: Spec.hs
  other-modules:
    EasyBI.Test.Utils
    Paths_easy_bi_server
  build-depends:
    base >=4.16.4 && <4.17,
    simple-sql-parser >= 0.6.1,
    tasty,
    tasty-hunit,
    easy-bi-server,
    easy-bi-sql,
    easy-bi-vis,
    text,
    bytestring,
    directory,
    filepath,
    process,
    HUnit,
    temporary

  autogen-modules:
    Paths_easy_bi_server