cabal-version:       2.2
name:                easy-bi-sql
version:             0.1.0.0
synopsis:            SQL parsing
license-file: LICENSE
license: Apache-2.0
author: Jann Müller <j-mueller@users.noreply.github.com>
maintainer: Jann Müller <j-mueller@users.noreply.github.com>
copyright: (c) 2022 Jann Müller
build-type:          Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs:
    lib
  exposed-modules:
    EasyBI.Sql.Syntax
    EasyBI.Sql.Types

  build-depends:
    base >=4.16.4 && <4.17
    , recursion-schemes
    , simple-sql-parser >= 0.6.1
    , mtl
    , containers

test-suite easy-bi-sql-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -threaded -rtsopts
  main-is: Spec.hs
  build-depends:
    base >=4.16.4 && <4.17,
    simple-sql-parser >= 0.6.1,
    tasty,
    tasty-hunit,
    easy-bi-sql