cabal-version:       2.2
name:                easy-bi-sql
version:             0.1.0.0
synopsis:            SQL parsing
license-file: LICENSE
license: Apache-2.0
author: Jann Müller <j-mueller@users.noreply.github.com>
maintainer: Jann Müller <j-mueller@users.noreply.github.com>
copyright: (c) 2022 Jann Müller
build-type:          Simple

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wunused-packages

library
  import: lang
  hs-source-dirs:
    lib
  exposed-modules:
    EasyBI.Sql.BuiltinTypes
    EasyBI.Sql.Catalog
    EasyBI.Sql.Class
    EasyBI.Sql.Effects.Annotate
    EasyBI.Sql.Effects.Fresh
    EasyBI.Sql.Effects.Types
    EasyBI.Sql.Orphans
    EasyBI.Sql.Syntax
    EasyBI.Sql.Types
    EasyBI.Sql.Utils

  build-depends:
    base >=4.16.4 && <5
    , recursion-schemes
    , simple-sql-parser >= 0.6.1
    , mtl
    , containers
    , transformers
    , lens
    , prettyprinter
    , text
    , serialise
    , aeson

test-suite easy-bi-sql-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options: -threaded -rtsopts
  main-is: Spec.hs
  other-modules:
    Spec.Generators
    Spec.Predicate
    Spec.Unification
  build-depends:
    base >=4.16.4 && <5,
    simple-sql-parser >= 0.6.1,
    tasty,
    tasty-hunit,
    easy-bi-sql,
    tasty-quickcheck,
    mtl,
    transformers,
    containers